[gd_scene load_steps=11 format=2]

[ext_resource path="res://Raw Resources/Sprites/Shit Sprites/Plop.png" type="Texture" id=1]
[ext_resource path="res://Entities/Enemies/Plop.gd" type="Script" id=2]
[ext_resource path="res://Entities/Enemies/PlayerDetection.tscn" type="PackedScene" id=3]
[ext_resource path="res://Raw Resources/Sprites/Shadows/SmallShadow.png" type="Texture" id=4]
[ext_resource path="res://Entities/Enemies/WanderController.tscn" type="PackedScene" id=5]
[ext_resource path="res://Entities/Player/Hurtbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Entities/Player/Stats.tscn" type="PackedScene" id=7]




[sub_resource type="CapsuleShape2D" id=4]
radius = 5.0
height = 4.0

[sub_resource type="CapsuleShape2D" id=5]
radius = 7.0
height = 2.0

[sub_resource type="CircleShape2D" id=2]
radius = 32.0

[node name="Plop" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 0, 9 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 3 )
shape = SubResource( 4 )

[node name="Hurtbox" parent="." instance=ExtResource( 6 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, 2 )
shape = SubResource( 5 )

[node name="Stats" parent="." instance=ExtResource( 7 )]
max_health = 30

[node name="PlayerDetection" parent="." instance=ExtResource( 3 )]
visible = false

[node name="CollisionShape2D" parent="PlayerDetection" index="0"]
modulate = Color( 1, 1, 1, 0.0941176 )
shape = SubResource( 2 )

[node name="WanderController" parent="." instance=ExtResource( 5 )]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="Hurtbox"]

[editable path="PlayerDetection"]
